# ym2149

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: all.rs  all_single_channel.rs  battle_against.rs  battle_against_a_true_hero.rs  coin.rs  dodoredo.rs  doremi.rs  doremi_pluck.rs  envelope.rs  noise_sweep.rs  sweep.rs
src/: audio.rs  lib.rs  main.rs  main.rs.bup  testcode.rs  ym2149.rs  ym2149f.rs
